network-policy/net/db.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db-pod
  namespace: default
  labels:
    app: db
spec:
  containers:
  - name: nginx-container
    image: nginx:latest
    ports:
    - containerPort: 80
